updated sthe swagger doc
